[gd_scene load_steps=9 format=3 uid="uid://defynssljd4ad"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_km2te"]
[ext_resource type="Texture2D" uid="uid://ckyg81jv6v2ci" path="res://graphics/player/player.png" id="2_tfeml"]
[ext_resource type="Texture2D" uid="uid://qu68xkjcmxq1" path="res://graphics/decals/white.png" id="3_vjw2q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_w2kat"]
radius = 64.0312

[sub_resource type="Gradient" id="Gradient_x4lr8"]
colors = PackedColorArray(0, 0.984314, 0.945098, 0.623529, 0.533333, 0.984314, 0.945098, 0.388235)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_8t16b"]
gradient = SubResource("Gradient_x4lr8")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_56grp"]
particle_flag_disable_z = true
spread = 14.57
gravity = Vector3(0, 0, 0)
initial_velocity_min = 999.75
initial_velocity_max = 2000.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.1
scale_max = 0.5
color = Color(0, 0.984314, 0.945098, 0.623529)
color_ramp = SubResource("GradientTexture1D_8t16b")

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_5rnmk"]
polygon = PackedVector2Array(-12, -61, 2, -63, 13, -61, 25, -65, 32, -61, 36, -53, 44, -46, 46, -40, 50, -33, 60, -31, 71, -21, 79, -13, 88, -14, 96, -11, 99, -7, 111, -6, 114, -2, 125, -1, 127, 2, 132, 5, 134, 9, 135, 19, 132, 27, 129, 30, 124, 28, 123, 32, 117, 33, 110, 32, 104, 38, 100, 41, 97, 42, 96, 48, 86, 50, 65, 49, 60, 46, 59, 38, 51, 38, 44, 36, 39, 40, 28, 42, 19, 48, 2, 55, -16, 57, -25, 56, -33, 49, -36, 41, -41, 32, -47, 26, -50, 20, -50, 14, -51, 11, -57, 6, -59, -11, -58, -22, -52, -33, -50, -41, -43, -48, -32, -51, -24, -56)

[node name="Player" type="CharacterBody2D" groups=["Entity"]]
collision_mask = 31
script = ExtResource("1_km2te")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(38, -3)
rotation = 1.5708
texture = ExtResource("2_tfeml")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_w2kat")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GrenadeCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserStartPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(132, 16)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(129, 9)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(128, 23)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(130, 15)
emitting = false
amount = 14
process_material = SubResource("ParticleProcessMaterial_56grp")
texture = ExtResource("3_vjw2q")
lifetime = 0.2
one_shot = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_5rnmk")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="GrenadeCooldown" to="." method="_on_grenade_cooldown_timeout"]
